# Lustre_Project

./: .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json
analyzer/: Cargo.toml
analyzer/src/: ast.rs  checker.rs  diagnostic.rs  interpreter.rs  lib.rs  parser.rs  test.rs
analyzer/src/ast/: ast.rs  ast_types.rs  binop.rs  double_visitor.rs  expression.rs  (+9 more)
cli/: Cargo.toml
demo/: main.lus
gui/: Cargo.toml
lsp/: Cargo.toml
lsp/src/: data.rs  lib.rs  main.rs  main_lsp_server.rs  main_tower.rs
tests/: adder.json  adder.lus  always_false.lus  always_true.lus  arrow_chain.lus  arrow_operator.lus  arrow_plus_chain.lus  basic_fibo.lus  basic_pre.lus  chain_operator.lus  chain_operator_2.lus  chain_operator_3.lus  constants.lus  constants_2.lus  cycle_2.lus  cycle_3.lus  cyclic_def_in_node.lus  double.lus  double_2.lus  eq_array_not_same_size.json  eq_array_not_same_size.lus  f_no_args_no_equation.json  f_no_args_no_equation.lus  fibonacci_11.lus  fibonacci_12.lus  fibonacci_2.lus  fibonaci_2.lus  fibonnaci_1.lus  fibonnaci_3.lus  fibonnaci_4.lus  func_call_1.lus  func_call_2.lus  func_call_3.json  func_call_3.lus  func_call_4.lus  has_been_true.lus  has_been_true_if_1.lus  has_been_true_if_2.lus  has_been_true_if_3.lus  id.lus  (+49 more)
vscode_extension/: CHANGELOG.md  README.md  lustre-vscode-0.0.1.vsix  lustre-vscode.vsix  package-test-test.json  package.json  tsconfig.json  vsc-extension-quickstart.md
vscode_extension/src/: extension.ts  extension_not_working_wasm.ts  extension_wasm_try.ts
vscode_extension/syntaxes/: lustre.tmLanguage.json
(+46 files in other folders)
