[package]
name = "lustrels"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp-server = "0.23"
ls-types = "0.0.2"
lustre_analyzer = { path = "../analyzer" }
tokio = { version = "1.47.1", features = ["rt", "io-std", "sync", "macros", "rt-multi-thread"] }
# async-std = "1.13.2"
async-lock = "3.4.1"
