[package]
name = "lustrels"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp-server = { version = "0.23" } # , default-features = false, features = ["runtime-agnostic"] }
ls-types = "0.0.2"
lustre_analyzer = { path = "../analyzer" }

# tokio = { version = "1.47.1", features = ["rt", "io-util", "time", "io-std"] }
tokio = { version = "1.47.1", features = ["full"] }
# async-std = "1.13.2"
async-lock = "3.4.1"
# async-std = "1.13.1"

# futures = "0.3"


