[package]
name = "lustrels"
version = "0.1.0"
edition = "2024"

[dependencies]
lustre_analyzer = { path = "../analyzer" }

lsp-types = "0.97.0"
lsp-server = "0.7.9"

# ls-types = "0.0.2"
# tower-lsp-server = "0.23.0"
# tokio = { version = "1.49.0", features = ["full"] }
# async-lock = "3.4.2"

anyhow = "1.0.100"
colored = "3"


rustc-hash = "2.1.1"
log = "0.4.27"
serde_json = "1.0.140"
serde = { version = "1.0.219" }
serde_derive = { version = "1.0.219" }
